--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -114,7 +114,8 @@
 
     /* Projects */
 
-    #p1_heading {
+    .project_heading {
+        font-family: 'Courier New', Courier, monospace;
         background-color: #281259;
         color: white; 
         width: 100%;
@@ -140,6 +141,7 @@
     }
 
     #p1_desc {
+        background-color: #F2F2F2;
         float: left;
         width: 50%; 
         height: auto;
@@ -189,6 +191,7 @@
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         padding-left: 15%;
         padding-right: 10%;
+        padding-bottom: 5%;
     }
 
     #p1_applications {
@@ -215,9 +218,58 @@
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         padding-left: 15%;
         padding-right: 10%;
+        padding-bottom: 5%;
     }
 
-    
+    #p2_desc {
+        background-color: #F2F2F2;
+        width: 60%; 
+        height: auto;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+
+    #p2_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .image_container {
+        background-color: #F2F2F2;
+        width: 60%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+    }
+
+    .image_container img {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #p3_desc {
+        background-color: #F2F2F2;
+        width: 60%; 
+        height: auto;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+
+    #p3_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
 
     /* Projects End */
 
