--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -296,6 +296,28 @@
         padding-right: 5%;
     }
 
+    form {
+        background-color: #F2F2F2;
+        width: 60%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form_prompt {
+        clear: left;
+        padding-top: 2.5%;
+        padding-left: 5%;
+    }
+
+    #form_buttons {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        
+    }
+
+
     /* Contact End */
 
     /* About */ 
