Add divs to about.html
- Enclose facts about self in div tags
- Enclose video in div tags

--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -314,13 +314,13 @@
         padding-top: 2.5%;
         padding-bottom: 2.5%;
         padding-left: 5%;
-        
     }
 
-
     /* Contact End */
+    
 
-    /* About */ 
+    /* About Start */ 
+    
     /* About End */ 
 
     /* Footer Start */
