--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -310,10 +310,22 @@
         padding-left: 5%;
     }
 
-    #form_buttons {
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
-        padding-left: 5%;
+    .form_button {
+        background-color: #73168C;
+        color: white;
+        border-radius: 10px;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        padding-left: 3%;
+        padding-right: 3%;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+        margin-left: 5%;
+    }
+
+    .form_button:hover {
+        background-color: #C04BF2;
+        
     }
     /* Contact End */
     
