--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -18,6 +18,12 @@
         padding-top: 55px;
     }
 
+    header h3 {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        color: white; 
+        padding-left: 5.5%;
+    }
+
     #banner {
         width: 100%; 
         height: 140px;
