--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 @media only screen and (max-width:480px)
 {
-    
+    #wrapper {
+
+    }
+
+    #banner {
+        width: 100%;
+        height: 140px;
+        background-image: url(../images/banner-image.jpg);  /* External source: https://www.w3schools.com/cssref/pr_background-image.php */
+        background-size: contain;   /* External source: https://www.w3schools.com/cssref/css3_pr_background-size.php */ 
+    }
 } 
