--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 @media only screen and (min-width:481px) and (max-width:960px)
 {
-     
+    #banner {
+        color: white;
+        width: 100%;
+        height: 140px;
+        background-image: url(../images/banner-image.jpg);  /* External source: https://www.w3schools.com/cssref/pr_background-image.php */
+        background-size: contain;   /* External source: https://www.w3schools.com/cssref/css3_pr_background-size.php */ 
+        text-align: center;
+    }
+    
+    #banner h1 {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        padding-top: 5%;
+    }
+
+    #banner h3 {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
 } 
