--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @media only screen and (min-width:481px) and (max-width:960px)
 {
+    /* Header Start */
     #banner {
         color: white;
         width: 100%;
@@ -43,6 +44,19 @@
     .navigation_button a {
         color: white;
         text-decoration: none;
+    }
+    /* Header End */ 
+
+    /* Home Start */
+    #comic_strip_container img {
+        width: 80%;
+        height: auto;
+        border: 14px solid #281259;  
+        margin-left: auto;
+        margin-right: auto; 
+        display: block; 
+        margin-top: 1%; 
+        margin-bottom: 1%;
     }
 
 
