--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -109,7 +109,33 @@
     /* Home End */
 
     /* Footer Start */
+    footer {
+        background: -moz-linear-gradient(left, #070926 0%, #281259 100%);
+        background: -webkit-linear-gradient(top, #070926 0%, #281259 100%);
+        background: -o-linear-gradient(top, #070926 0%, #281259 100%);
+        background: linear-gradient(to right, #070926 0%,#281259  100%);
+        width: 100%; 
+        padding-top: 50px;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+
+    footer a {
+        background-color: #73168C;
+        color: white;
+        font-family: "Lucida Console", monospace;
+        font-style: normal;
+        text-decoration: none; /* External source: https://www.w3schools.com/cssref/pr_font_font-style.php */ 
+        border-radius: 10px;
+        padding: 20px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
     
+    footer p {
+        color: white; 
+        padding-top: 20px;
+    }
 
     /* Footer End */ 
 } 
