--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -111,6 +111,173 @@
     }
     /* Home End */
 
+    /* Project 1 Start*/
+    #p1_heading h3 {
+        font-family:'Courier New', Courier, monospace;
+        font-size: 1.5rem;
+    }
+
+    #p1_desc_image {
+        margin-top: 1%;
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto; 
+        display: flex;
+    }
+
+    #p1_desc {
+        background-color: #F2F2F2;
+        float: left;
+        width: 50%; 
+        height: auto;
+        background-color: #F2F2F2;
+
+    }
+
+    #p1_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%; 
+    }
+
+    #networking_lab_image {
+        float: left; 
+        width: 50%; 
+        height: auto;
+        background-image: url(../images/networking-lab.png); /* External source: https://www.w3schools.com/cssref/pr_background-image.php */
+        background-size: cover; /* External source: https://www.w3schools.com/cssref/css3_pr_background-size.php */ 
+    }
+
+    #p1_hardware_applications {
+        padding-top: 1%;
+        clear: left; 
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto; 
+        display: flex;
+    }
+
+    #p1_hardware {
+        background-color: #F2F2F2;
+        float: left;
+        width: 50%;
+        height: auto; 
+    }
+
+    #p1_hardware h3 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_hardware ul {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 15%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+    }
+
+    #p1_applications {
+        background-color: #F2F2F2;
+        float: left;
+        width: 50%;
+        height: auto; 
+    }
+
+    #p1_applications h3 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_applications p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_applications ul {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 15%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+    }
+    /* Project 1 End */
+
+    /* Project 2 Start */
+    #p2_desc {
+        background-color: #F2F2F2;
+        width: 80%; 
+        height: auto;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+
+    #p2_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    /* Project 2 End */ 
+
+    /* Project 3 Start */
+    #p3_desc {
+        background-color: #F2F2F2;
+        width: 80%; 
+        height: auto;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+
+    #p3_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    /* Project 3 End */ 
+
+    /* Multiple or All Projects Start*/
+    .image_container {
+        background-color: #F2F2F2;
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+    }
+
+    .image_container img {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .project_heading {
+        padding-top: 4%;
+        font-family: 'Courier New', Courier, monospace;
+        background-color: #281259;
+        color: white; 
+        width: 100%;
+        height: auto;
+        text-align: center; 
+        margin-top: 1%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        
+    }
+    /* Multiple or All Projects End */
+
     /* Footer Start */
     footer {
         background: -moz-linear-gradient(left, #070926 0%, #281259 100%);
