--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -129,38 +129,21 @@
         font-size: 1.5rem;
     }
 
-    #p1_desc_image {
-        margin-top: 1%;
-        width: 60%;
-        height: auto;
-        margin-left: auto;
-        margin-right: auto; 
-        display: flex;
-    }
-
     #p1_desc {
         background-color: #F2F2F2;
-        float: left;
-        width: 50%; 
+        width: 60%; 
         height: auto;
-        background-color: #F2F2F2;
-
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #p1_desc p {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: large;
         padding-top: 5%;
+        padding-bottom: 5%;
         padding-left: 10%;
         padding-right: 10%; 
-    }
-
-    #networking_lab_image {
-        float: left; 
-        width: 50%; 
-        height: auto;
-        background-image: url(../images/networking-lab.png); /* External source: https://www.w3schools.com/cssref/pr_background-image.php */
-        background-size: cover; /* External source: https://www.w3schools.com/cssref/css3_pr_background-size.php */ 
     }
 
     #p1_hardware_applications {
