--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -123,29 +123,7 @@
     }
     /* Home End */
 
-    /* Project 1 Start*/
-    #p1_heading h3 {
-        font-family:'Courier New', Courier, monospace;
-        font-size: 1.5rem;
-    }
-
-    #p1_desc {
-        background-color: #F2F2F2;
-        width: 60%; 
-        height: auto;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #p1_desc p {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: large;
-        padding-top: 5%;
-        padding-bottom: 5%;
-        padding-left: 10%;
-        padding-right: 10%; 
-    }
-
+    /* Projects Start*/
     #p1_hardware_applications {
         padding-top: 1%;
         clear: left; 
@@ -202,18 +180,16 @@
         padding-right: 10%;
         padding-bottom: 5%;
     }
-    /* Project 1 End */
-
-    /* Project 2 Start */
-    #p2_desc {
+ 
+    .project_desc {
         background-color: #F2F2F2;
         width: 60%; 
         height: auto;
         margin-left: auto;
-        margin-right: auto; 
+        margin-right: auto;
     }
 
-    #p2_desc p {
+    .project_desc p {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: large;
         padding-top: 2.5%;
@@ -221,28 +197,7 @@
         padding-left: 5%;
         padding-right: 5%;
     }
-    /* Project 2 End */ 
 
-    /* Project 3 Start */
-    #p3_desc {
-        background-color: #F2F2F2;
-        width: 60%; 
-        height: auto;
-        margin-left: auto;
-        margin-right: auto; 
-    }
-
-    #p3_desc p {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: large;
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-    /* Project 3 End */ 
-
-    /* Multiple or All Projects Start*/
     .image_container {
         background-color: #F2F2F2;
         width: 60%;
@@ -271,7 +226,7 @@
         padding-bottom: 1%;
         
     }
-    /* Multiple or All Projects End */
+    /* Projects End */
 
     /* Contact Start */ 
     #contact_instructions {
