--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -178,8 +178,7 @@
         height: auto;
         text-align: center; 
         margin-top: 1%;
-        padding-top: 1%;
-        padding-bottom: 1%;
+        padding-bottom: 4%;
     }
  
     .project_desc {
@@ -214,6 +213,64 @@
         margin-right: auto;
     }
     /* Projects End */
+
+    /* Contact Start */ 
+    #contact_instructions {
+        background-color: #F2F2F2;
+        width: 80%; 
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #contact_instructions p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    form {
+        background-color: #F2F2F2;
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form_prompt {
+        clear: left;
+        padding-top: 2.5%;
+        padding-left: 5%;
+    }
+
+    .form_prompt input {
+        width: 50%;
+        height: 30px; 
+    }
+
+    .form_prompt textarea {
+        width: 70%;
+    }
+
+    .form_prompt select {
+        height: 30px;
+    }
+
+    .form_button {
+        background-color: #73168C;
+        color: white;
+        border-radius: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+        margin-left: 5%;
+    }
+    /* Contact End */
 
     /* Footer Start */
     footer {
