--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -337,11 +337,11 @@
     }
 
     #about_me_video video {
+        width: 100%;
+        height: auto;
         margin-left: auto;
         margin-right: auto;
     }
-
-
     /* About End */ 
 
     /* Footer Start */
