--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,5 +1,54 @@
 @charset "UTF-8";
 @media only screen and (max-width:480px)
 {
+    /* Header Start */
+    #banner {
+        color: white;
+        width: 100%;
+        height: 140px;
+        background-image: url(../images/banner-image.jpg);  /* External source: https://www.w3schools.com/cssref/pr_background-image.php */
+        background-size: contain;   /* External source: https://www.w3schools.com/cssref/css3_pr_background-size.php */ 
+        text-align: center;
+    }
+    
+    #banner h1 {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        padding-top: 5%;
+    }
 
+    #banner h3 {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    #navigation_menu {
+        background: -moz-linear-gradient(left, #73168C 0%, #C04BF2 100%);
+        background: -webkit-linear-gradient(top, #73168C 0%, #C04BF2 100%);
+        background: -o-linear-gradient(top, #73168C 0%, #C04BF2 100%);
+        background: linear-gradient(to right, #73168C 0%,#C04BF2  100%);
+        width: 100%;
+        height: 275px;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .navigation_button {
+        background-color: rgb(76, 8, 140);
+        border-radius: 10px;
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 60px;
+        padding-right: 60px;
+        margin-top: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+        font-family: "Lucida Console", monospace;
+    }
+
+    .navigation_button a {
+        color: white;
+        text-decoration: none;
+    }
+    /* Header End */ 
 } 
