--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -51,4 +51,65 @@
         text-decoration: none;
     }
     /* Header End */ 
+
+    /* Home Start */
+    #comic_strip_container img {
+        width: 95%;
+        height: auto;
+        border: 5px solid #281259;  
+        margin-left: auto;
+        margin-right: auto; 
+        margin-top: 1%; 
+        display: block; 
+    }
+
+    #fine_quote {
+        background: -moz-linear-gradient(45deg, #070926 0%, #281259 100%);
+        background: -webkit-linear-gradient(45deg, #070926 0%, #281259 100%);
+        background: -o-linear-gradient(45deg, #070926 0%, #281259 100%);
+        background: linear-gradient(45deg, #070926 0%, #281259 100%);
+        color: white;
+        width: 95%;
+        height: auto;
+        border: 5px solid #070926; 
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-top: 1%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    #fine_quote h3 {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    #fine_quote p {
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        font-size: 1.5rem;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    #introduction {
+        background-color: #F2F2F2;
+        width: 95%; 
+        height: auto;
+        border: 5px solid #F2F2F2;
+        margin-top: 1%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #introduction h3 {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-left: 2%;
+    }
+
+    #introduction p {
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    /* Home End */ 
 } 
