--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -32,8 +32,11 @@
         flex-direction: row;
     }
 
+    #navigation_menu .navigation_button {
+        background-color: #40067D;
+    }
+
     .navigation_button {
-        background-color: rgb(76, 8, 140);
         float: left;
         border-radius: 10px;
         text-align: center;
@@ -350,27 +353,30 @@
         background: -webkit-linear-gradient(top, #070926 0%, #281259 100%);
         background: -o-linear-gradient(top, #070926 0%, #281259 100%);
         background: linear-gradient(to right, #070926 0%,#281259  100%);
-        width: 100%; 
-        padding-top: 50px;
-        padding-bottom: 20px;
+        width: 100%;
+        height: 175px;
+        justify-content: center;
         text-align: center;
     }
 
-    footer a {
+    #social_menu {
+        display: flex;
+        justify-content: center;
+    }
+
+    #contact_menu .navigation_button {
         background-color: #73168C;
-        color: white;
-        font-family: "Lucida Console", monospace;
-        font-style: normal;
-        text-decoration: none; /* External source: https://www.w3schools.com/cssref/pr_font_font-style.php */ 
-        border-radius: 10px;
-        padding: 20px;
-        margin-left: 5px;
-        margin-right: 5px;
+    }
+
+    footer a {
+        font-style: normal; /* External source: https://www.w3schools.com/css/css_font_style.asp */ 
     }
     
     footer p {
+        clear: left;
         color: white; 
         padding-top: 20px;
+        height: 60px;
     }
 
     /* Footer End */ 
