Copy and tweak tablet.css for mobile.css
The footer buttons were made wider and stacked on top of each other.

--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -364,7 +364,7 @@
         justify-content: center;
     }
 
-    #contact_menu .navigation_button {
+    #social_menu .navigation_button {
         background-color: #73168C;
     }
 
