--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -122,36 +122,23 @@
         width: 100%; 
         padding-top: 50px;
         padding-bottom: 20px;
-        
         text-align: center;
+        align-items: center;
     }
 
-    .contact_button {
+    footer .navigation_button {
         background-color: #73168C;
-        font-family: "Lucida Console", monospace;
-        font-style: normal;
-        text-align: center;
-        width: 100px;
-        border-radius: 10px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 60px;
-        padding-right: 60px;
-        margin-top: 10px;
-        margin-left: 5px;
-        margin-right: 5px;
+    }
 
-    }
-    
-    .contact_button a {
+    footer a {
         color: white;
-        text-decoration: none; /* External source: https://www.w3schools.com/cssref/pr_font_font-style.php */ 
+        text-decoration: none;
+        font-style: normal; /* External source: https://www.w3schools.com/css/css_font_style.asp */ 
     }
-    
+
     footer p {
         color: white; 
         padding-top: 20px;
     }
-
     /* Footer End */ 
 } 
