Copy and tweak project page CSS for mobile viewports
The project descriptions and images were made wider from the tablet CSS stylesheet.

--- a/stylesheets/full.css
+++ b/stylesheets/full.css
@@ -58,7 +58,7 @@
         text-decoration: none;
     }
 
-    .navigation_button:hover {
+    #navigation_menu .navigation_button:hover {
         background-color: #C04BF2;
     }
     /* Header End */ 
