--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -113,6 +113,108 @@
     }
     /* Home End */ 
 
+    /* Projects Start*/
+    #p1_hardware {
+        background-color: #F2F2F2;
+        clear: left;
+        width: 95%;
+        height: auto; 
+        padding-top: 1%; 
+        margin-left: auto;
+        margin-right: auto;  
+    }
+
+    #p1_hardware h3 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        text-align: center;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_hardware ul {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 15%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+    }
+
+    #p1_applications {
+        background-color: #F2F2F2;
+        clear: left;
+        width: 95%;
+        height: auto; 
+        padding-top: 1%; 
+        margin-left: auto;
+        margin-right: auto;  
+    }
+
+    #p1_applications h3 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        text-align: center;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_applications p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #p1_applications ul {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 15%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+    }
+
+    .project_heading {
+        padding-top: 4%;
+        font-family: 'Courier New', Courier, monospace;
+        background-color: #281259;
+        color: white; 
+        width: 100%;
+        height: auto;
+        text-align: center; 
+        margin-top: 1%;
+        padding-bottom: 4%;
+    }
+ 
+    .project_desc {
+        background-color: #F2F2F2;
+        width: 95%; 
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .project_desc p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .image_container {
+        background-color: #F2F2F2;
+        width: 95%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+    }
+
+    .image_container img {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    /* Projects End */
+
     /* Footer Start */
     footer {
         background: -moz-linear-gradient(left, #070926 0%, #281259 100%);
