--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -215,6 +215,64 @@
     }
     /* Projects End */
 
+    /* Contact Start */ 
+    #contact_instructions {
+        background-color: #F2F2F2;
+        width: 95%; 
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #contact_instructions p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: large;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    form {
+        background-color: #F2F2F2;
+        width: 95%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form_prompt {
+        clear: left;
+        padding-top: 2.5%;
+        padding-left: 5%;
+    }
+
+    .form_prompt input {
+        width: 75%;
+        height: 30px; 
+    }
+
+    .form_prompt textarea {
+        width: 75%;
+    }
+
+    .form_prompt select {
+        height: 30px;
+    }
+
+    .form_button {
+        background-color: #73168C;
+        color: white;
+        border-radius: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+        margin-left: 5%;
+    }
+    /* Contact End */
+
     /* Footer Start */
     footer {
         background: -moz-linear-gradient(left, #070926 0%, #281259 100%);
